kubernetes/services/homepage/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: homepage
  labels:
    app: homepage
    type: dashboard
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
